# discovery

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md
.auto-registry/: agent-registry.json  starter-kit-registry.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: bugs.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/scripts/: check_agent_removal_impact.py  model_weights_sniffer.py  update_registry.py  update_starter_kits_registry.py  validate_pr.py  validate_starter_kits.py
.github/tests/: conftest.py  test_model_weights_sniffer.py  test_validate_pr_pol009.py  test_validate_pr_pol010.py
.github/workflows/: auto-approve-registry-prs.yml  auto-label-discussions.yml  auto-merge-on-approval.yml  check-agent-removal-impact.yml  create-labels.yml  pr-review.yml  unit-tests.yml  update-registry.yml  update-starter-kits-registry.yml  validate-agent-schemas.yml  validate-everything.yml  validate-starter-kit-schema.yml  validate-starter-kits.yml
faq/: README.md
utilities/: README.md
utilities/agent-evaluation/: README.md  pyproject.toml
utilities/agent-evaluation/datasets/literature-agent/: retrieval-evaluators.json  shared-evaluators.json  tool-calling-evaluators.json
utilities/agent-evaluation/evaluators/: azure_credential.py  discovery_client.py  eval_datasets.py  invoke_and_capture.py  pipeline.py  responses_to_eval_dataset.py  run_offline_eval.py
utilities/agent-evaluation/sample-agent/: agent.yaml  metadata.yaml
utilities/agent-evaluation/workflows/: agent-evaluation.yml
(+488 files in other folders)
