[project]
name = "discovery-agent-evaluation"
version = "0.1.0"
description = "Sample evaluation pipeline for Microsoft Discovery / Foundry agents (capture live responses, score offline with Foundry evaluators)"
requires-python = ">=3.10"

[project.optional-dependencies]
evaluation = [
    "aiohttp>=3.9.0",
    "azure-ai-projects>=2.2.0",
    "azure-identity>=1.19.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
